# IntelligentAgriculture

./: .gitignore  CLAUDE.md
IA-AI/: IMPLEMENTATION_GUIDE.md  pyproject.toml  test_main.http
IA-AI/app/: config.py  main.py
IA-AI/app/agent/: assistant.py  prompt.py  router.py  tool_registry.py
IA-AI/app/agent/experts/: executor.py  registry.py
IA-AI/app/rag/: __init__.py  config.py  context_builder.py  document_loader.py  pipeline.py  retriever.py  text_splitter.py  vector_store.py
IA-AI/app/rag/model/: embeddings.py  reranker.py
IA-AI/app/services/: http_base.py  http_client.py
IA-AI/app/services/clients/: ai_client.py  alarm_client.py  device_client.py  environment_client.py  farm_client.py  irrigation_client.py  monitor_point_client.py  smart_irrigation_client.py  test_client.py  weather_client.py
IA-AI/app/tools/: __init__.py  alarm_tools.py  device_tools.py  environment_tools.py  irrigation_tools.py  monitor_tools.py  rag_tools.py  smart_irrigation_tools.py  weather_tool.py
IA-AI/data/documents/faq/: 常见问题.md
IA-AI/data/documents/manual/: 设备操作手册.md
IA-AI/docs/: rag-design.md
IA-AI/test/: TestConfig.py  test.ipynb  test_memory.py  test_rag.py
IA-server/: .env.example  README.md  pom.xml  temp-settings.xml  你好_66f9517b.json
IA-server/sql/: ai.sql  create.sql  database_schema.sql  migration_field.sql  smart_irrigation.sql  test_data.sql
app/: AGENTS.md
app/AppScope/: app.json5
docs/: system_design.md  技术与架构.md
ml-models/: train_lstm.py
需求文档/: 320文档.md  总体要求.md  接下来开发需求.md  智能灌溉算法创新方案.md  系统分析.md  软件设计详细需求.md  需求分析.md
(+175 files in other folders)
